--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
