--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-thunk": "^2.3.0",
@@ -40,6 +38,8 @@
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.6.3"
   }
 }
