--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exwidget",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://vladpoe.github.io/exwidget",
   "dependencies": {
     "big.js": "^5.2.2",
     "classnames": "^2.2.6",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +43,7 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "redux-devtools-extension": "^2.13.5",
     "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.6.3"
+    "react-test-renderer": "^16.6.3",
+    "gh-pages": "^2.0.1"
   }
 }
