--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "eslint": "./node_modules/.bin/eslint src/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,9 +42,14 @@
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "redux-devtools-extension": "^2.13.5",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.0",
+    "gh-pages": "^2.0.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.6.3",
-    "gh-pages": "^2.0.1"
+    "redux-devtools-extension": "^2.13.5"
   }
 }
